Corrcted OrderServiceTest and added data initializers